@startuml diagramme-classes
top to bottom direction
scale 2.2 width
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam nodesep 120
skinparam ranksep 130
skinparam linetype polyline
skinparam defaultFontSize 13
skinparam ArrowFontSize 11
skinparam Padding 18

title Diagramme de classes — domaine métier

' ===== Ligne 1 : noyau (4 classes, chaîne horizontale) =====
class User {
  - username : String
  - role : UserRole
  - fullName : String
}

class Client {
  - clientNumber : String
  - cin : String
  - status : ClientStatus
}

class Account {
  - accountNumber : String
  - type : AccountType
  - balance : BigDecimal
  - status : AccountStatus
}

class Transaction {
  - type : TransactionType
  - amount : BigDecimal
  - executedAt : Instant
}

' ===== Ligne 2 : extensions (5 classes, chaîne horizontale) =====
class BillProvider {
  - code : String
  - name : String
}

class BillPayment {
  - clientReference : String
  - amount : BigDecimal
}

class CheckbookOrder {
  - orderNumber : String
  - status : CheckbookOrderStatus
  - sheetCount : CheckbookSheetCount
}

class Notification {
  - type : NotificationType
  - title : String
  - read : boolean
}

class AuditLog {
  - action : String
  - entityType : String
  - performedAt : Instant
}

' Positionnement en grille 2 x 5 (très aéré)
User -[hidden]right- Client
Client -[hidden]right- Account
Account -[hidden]right- Transaction

BillProvider -[hidden]right- BillPayment
BillPayment -[hidden]right- CheckbookOrder
CheckbookOrder -[hidden]right- Notification
Notification -[hidden]right- AuditLog

User -[hidden]down- BillProvider
Client -[hidden]down- BillPayment
Account -[hidden]down- CheckbookOrder
Transaction -[hidden]down- Notification

' ===== Relations noyau =====
Client "1" o-- "0..*" Account : possède
Account "0..1" o-- "0..*" Transaction : source
Account "0..1" o-- "0..*" Transaction : destination
Transaction "0..*" --> "1" User : executedBy

' ===== Relations extensions (liens surtout verticaux) =====
Account "1" o-- "0..*" BillPayment : paie via
BillProvider "1" o-- "0..*" BillPayment
BillPayment "1" --> "1" Transaction : génère

Client "1" o-- "0..*" CheckbookOrder : demande
Account "1" o-- "0..*" CheckbookOrder : commande
User "1" o-- "0..*" CheckbookOrder : traite

Client "1" o-- "0..*" Notification : reçoit
User "1" o-- "0..*" Notification : reçoit

User "1" o-- "0..*" AuditLog : effectue

@enduml
